--- a/css/style.css
+++ b/css/style.css
@@ -165,3 +165,9 @@ form button {
   border: 3px solid #dadada;
   box-shadow: 0 0 15px #dadada;
 }
+
+.lightbox__arrow-container {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
