--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap");
 :root {
   --primary-color: rgb(118, 177, 255);
-  --primary-background-color: #fff;
+  --primary-background-color: rgba(255, 255, 255, 0.1);
+  --width: min(830px, 100%);
+  --box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
 }
 * {
   box-sizing: border-box;
@@ -21,18 +23,21 @@ body {
   align-items: center;
   gap: 3rem;
   background: linear-gradient(
-    180deg,
-    rgba(156, 161, 184, 1) 0%,
-    rgba(106, 113, 139, 1) 100%
+    0deg,
+    rgba(232, 247, 255, 1) 0%,
+    rgba(255, 255, 255, 1) 100%
   );
+
   margin: 2rem 0 0 0;
   min-height: calc(100svh - 2rem);
+  width: 100svw;
 }
 .flickr-header {
-  width: calc((150px * 5) + (2rem * 4));
+  width: var(--width);
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 1rem;
 }
 .wrapper {
   display: flex;
@@ -45,11 +50,14 @@ body {
   height: 50px;
   display: flex;
   justify-content: center;
+  box-shadow: var(--box-shadow);
+  border-radius: 5px;
 }
 
 .search-box {
   background-color: var(--primary-background-color);
-  border: solid 2px var(--primary-color);
+  /* border: solid 2px var(--primary-color); */
+  border: 0;
   border-radius: 5px 0 0 5px;
   padding-left: 15px;
   width: 490px;
@@ -62,7 +70,10 @@ body {
   border-radius: 0 5px 5px 0;
   padding: 0 15px;
 }
-
+.search-icon {
+  width: 30px;
+  fill: #000;
+}
 #paginationContainer {
   display: flex;
   justify-content: center;
@@ -76,6 +87,7 @@ body {
   margin: 0;
   padding: 1rem 2rem;
   cursor: pointer;
+  font-size: 1.5rem;
   border-radius: 0.5rem;
   transition: background-color 250ms, color 250ms;
 }
@@ -104,7 +116,6 @@ body {
   align-items: center;
   font-size: 2rem;
   margin: 0;
-  cursor: pointer;
   transition: background-color 250ms, color 250ms;
 }
 
@@ -112,15 +123,10 @@ body {
   border: 2px solid var(--primary-color);
 }
 
-.page-list__item:hover {
-  background-color: var(--primary-color);
-  color: var(--primary-background-color);
-}
-
 #imgContainer {
   display: flex;
   flex-wrap: wrap;
-  width: calc((150px * 5) + (2rem * 4));
+  width: var(--width);
   gap: 2rem;
 }
 
@@ -194,8 +200,8 @@ body {
   cursor: pointer;
 }
 .lightbox__thumb--active {
-  border: 3px solid #dadada;
-  box-shadow: 0 0 15px #dadada;
+  border: 2px solid rgb(118, 177, 255);
+  box-shadow: 0 0 15px rgba(255, 255, 255, 0.8);
 }
 
 .lightbox__arrow-container {
@@ -209,4 +215,52 @@ body {
 }
 .image {
   cursor: pointer;
+}
+@media screen and (max-width: 900px) {
+  :root {
+    --box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+  }
+  body {
+    padding: 1rem;
+  }
+  .flickr-header {
+    flex-direction: column;
+    gap: 3rem 0;
+  }
+  .search-form {
+    width: 100%;
+  }
+  .search-box {
+    padding-left: 1rem;
+    font-size: 1.2rem;
+    width: 100%;
+  }
+  .wrapper {
+    margin-bottom: 3rem;
+  }
+  .img-per-page {
+    font-size: 1.2rem;
+  }
+  .page-list {
+    gap: 0.2rem;
+  }
+  .page-list__item {
+    font-size: 1.6rem;
+  }
+  .pagination__dots {
+    display: none;
+  }
+  #imgContainer {
+    justify-content: center;
+  }
+  .image {
+    box-shadow: 1px 1px 5px #333;
+  }
+  .lightbox__arrow-container {
+    display: none;
+  }
+  .button-page:hover {
+    background-color: inherit;
+    color: #000;
+  }
 }
